Added Icons and updated service names

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -74,25 +74,25 @@
   <div class="top-categories row text-center mb-4">
     <div class="top-category col-3">
       <div class="svg w-100 p-2 rounded-3">
-        <img src="../../../assets/images/worker.svg" class="img-fluid" />
+        <img src="../../../assets/images/FrameCarpenter.png" class="img-fluid" />
       </div>
-      Applaince Repair
+      Carpenter
     </div>
     <div class="top-category col-3">
       <div class="svg w-100 p-2 rounded-3">
-        <img src="../../../assets/images/worker.svg" class="img-fluid" />
+        <img src="../../../assets/images/FrameCleaner.png" class="img-fluid" />
       </div>
-      Applaince Repair
+      Plumber
     </div>
     <div class="top-category col-3">
       <div class="svg w-100 p-2 rounded-3">
-        <img src="../../../assets/images/worker.svg" class="img-fluid" />
+        <img src="../../../assets/images/FrameCleaner.png" class="img-fluid" />
       </div>
-      Applaince Repair
+      Cleaner
     </div>
     <div class="top-category col-3">
       <div class="svg w-100 p-2 rounded-3">
-        <img src="../../../assets/images/worker.svg" class="img-fluid" />
+        <img src="../../../assets/images/FrameElectrician.png" class="img-fluid" />
       </div>
       Applaince Repair
     </div>
@@ -205,7 +205,7 @@
         </div>
         <div class="card-body">
             <div class="card-title">
-                Cleaning Servcie
+                Cleaning Service
             </div>
             <div class="card-text">
                 Excellent Service
