Added cart and service list functionality

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -6,6 +6,9 @@
     <div class="search me-3">
         <mat-icon>search</mat-icon>
     </div>
+    <div class="cart me-3 pe-auto">
+    <mat-icon (click)="navigateToCart()">shopping_cart</mat-icon>
+    </div>
     <div class="account">
         <mat-icon>account_circle</mat-icon>
     </div>
