--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,9 @@
 <div class="header-container d-flex justify-content-between p-2 mb-2">
     <div class="location d-flex align-items-center">
-        <mat-icon>near_me</mat-icon><span>Hyderabad</span>
+        <mat-icon>near_me</mat-icon><span *ngIf="city.length>0 || pincode.length>0" class="d-flex ms-1 address flex-column"
+            (click)="showPincodePopup()">
+            <span>{{city}}</span><span class="d-flex align-items-center justify-content-center">{{pincode}} <mat-icon>keyboard_arrow_down</mat-icon></span></span>
+            <span *ngIf="city.length===0 && pincode.length===0" (click)="showPopUp()"> Get Location</span>
     </div>    
     <div class="left-end d-flex">
     <div class="search me-3">
