--- a/src/app/components/user-permission-modal/user-permission-modal.component.html
+++ b/src/app/components/user-permission-modal/user-permission-modal.component.html
@@ -1,4 +1,4 @@
-<div class="modal d-flex justify-content-center align-items-center" tabindex="-1">
+<div *ngIf="!showPopUp" class="modal d-flex justify-content-center align-items-center" tabindex="-1">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
