--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,9 @@ html,body{
     margin: 0;
     padding: 0;
 }
+* {
+    box-sizing: border-box;
+  }
 html{
     height: 100vh;
     width: 100vw;
@@ -13,4 +16,10 @@ body{
     height: 100%;
     width: 100%;
     box-sizing: border-box;
+}
+
+app-root{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
 }
