--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -4,16 +4,20 @@
     <div class="cart-item" *ngFor="let item of cartList">
         <div class="card item mb-2">
             <div class="card-header d-flex justify-content-between">
-                <span><strong>{{item.servcieName}}</strong></span>
+                <span><strong>{{item.serviceName}}</strong></span>
             </div>
             <div class="card-body">
                 <div class="cost">
                     &#8377; {{item.cost}} /-
                 </div>
                 <div class="workers">
-                    {{item.noOfWorkers}}
+                   No. of workers : {{item.workers}}
                 </div>
             </div>
         </div>
     </div>
+<div class="cart-bottom">
+    <h2 class="d-flex justify-content-end">Total : &#8377; {{total}} /-</h2>
+    <button class="btn btn-dark p-2 w-100" [ngClass]="cartList.length===0?'disabled':''">Book services</button>
+</div>
 </div>
