--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -72,37 +72,19 @@
     <strong class="fs-5">Top Categories</strong><span>view all</span>
   </p>
   <div class="top-categories row text-center mb-4">
-    <div (click)="navigateToServices('Carpentry')" class="top-category col-3">
+    <div *ngFor="let category of topCategories" (click)="navigateToServices(category.name)" class="top-category col-3">
       <div class="svg w-100 p-2 rounded-3">
         <img src="../../../assets/images/FrameCarpenter.png" class="img-fluid" />
       </div>
-      Carpentry
-    </div>
-    <div (click)="navigateToServices('Plumbing')" class="top-category col-3">
-      <div class="svg w-100 p-2 rounded-3">
-        <img src="../../../assets/images/FrameCleaner.png" class="img-fluid" />
-      </div>
-      Plumbing
-    </div>
-    <div (click)="navigateToServices('Cleaning')" class="top-category col-3">
-      <div class="svg w-100 p-2 rounded-3">
-        <img src="../../../assets/images/FrameCleaner.png" class="img-fluid" />
-      </div>
-      Cleaning
-    </div>
-    <div (click)="navigateToServices('Applaince Repair')" class="top-category col-3">
-      <div class="svg w-100 p-2 rounded-3">
-        <img src="../../../assets/images/FrameElectrician.png" class="img-fluid" />
-      </div>
-      Applaince Repair
+      {{category.name}}
     </div>
   </div>
   <div class="service-packages mb-4">
-    <p class="d-flex justify-content-between">
+    <p class="d-flex justify-content-between align-items-center ">
         <strong class="fs-5">Service Packages</strong><span>view all</span>
       </p>
       <div class="card-slider d-flex">
-              <div class="card">
+              <div *ngFor="let service of servicePackages" class="card">
                 <div class="card-body">
                   <h5 class="card-title mb-3">
                     <img
@@ -110,86 +92,12 @@
                       src="../../../assets/images/worker-red.svg"
                     />
                   </h5>
-                  <h6 class="card-subtitle mb-2 text-muted">Home cleaning package</h6>
-                  <p class="card-text">2000/-</p>
+                  <h6 class="card-subtitle mb-2 service-name text-muted">{{service.serviceName}}</h6>
+                  <p class="card-text d-flex justify-content-between align-items-center ">{{service.cost}} <span class="d-flex"><mat-icon class="me-2">people</mat-icon>{{service.workers}}</span></p>
                 </div>
-                <div class="card-footer">
-                  <a (click)="addToCart('service')">Add to cart</a>
-                </div>
-              </div>
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title mb-3">
-                    <img
-                      class="svg"
-                      src="../../../assets/images/worker-red.svg"
-                    />
-                  </h5>
-                  <h6 class="card-subtitle mb-2 text-muted">Applaince servcie package</h6>
-                  <p class="card-text">2000/-</p>
-                </div>
-                <div class="card-footer">
-                  <a (click)="addToCart('service')">Add to cart</a>
-                </div>
-              </div>
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title mb-3">
-                    <img
-                      class="svg"
-                      src="../../../assets/images/worker-red.svg"
-                    />
-                  </h5>
-                  <h6 class="card-subtitle mb-2 text-muted">Bathroom cleaning package</h6>
-                  <p class="card-text">2000/-</p>
-                </div>
-                <div class="card-footer">
-                  <a (click)="addToCart('service')">Add to cart</a>
-                </div>
-              </div>
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title mb-3">
-                    <img
-                      class="svg"
-                      src="../../../assets/images/worker-red.svg"
-                    />
-                  </h5>
-                  <h6 class="card-subtitle mb-2 text-muted">Home Sanitizing Package</h6>
-                  <p class="card-text">2000/-</p>
-                </div>
-                <div class="card-footer">
-                  <a (click)="addToCart('service')">Add to cart</a>
-                </div>
-              </div>
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title mb-3">
-                    <img
-                      class="svg"
-                      src="../../../assets/images/worker-red.svg"
-                    />
-                  </h5>
-                  <h6 class="card-subtitle mb-2 text-muted">Pest Control Package</h6>
-                  <p class="card-text">2000/-</p>
-                </div>
-                <div class="card-footer">
-                  <a (click)="addToCart('service')">Add to cart</a>
-                </div>
-              </div>
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title mb-3">
-                    <img
-                      class="svg"
-                      src="../../../assets/images/worker-red.svg"
-                    />
-                  </h5>
-                  <h6 class="card-subtitle mb-2 text-muted">Outdoor cleaning package</h6>
-                  <p class="card-text">2000/-</p>
-                </div>
-                <div class="card-footer">
-                  <a (click)="addToCart('service')">Add to cart</a>
+                <div class="card-footer d-flex justify-content-between align-items-center">
+                  <span *ngIf="!isInCart(service.serviceName)" (click)="addToCart(service)">Add to cart</span>
+                  <span *ngIf="isInCart(service.serviceName)" (click)="removeFromCart(service)">Remove from cart</span>
                 </div>
               </div>
       </div>
