--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -71,33 +71,34 @@
   <p class="d-flex justify-content-between">
     <strong class="fs-5">Top Categories</strong><span>view all</span>
   </p>
-  <div class="top-categories row text-center mb-4">
-    <div *ngFor="let category of topCategories" (click)="navigateToServices(category.name)" class="top-category col-3">
+  <div *ngIf="topCategories.length>0" class="top-categories row text-center mb-4">
+    <div *ngFor="let category of topCategories" (click)="navigateToServices(category.categoryname)" class="top-category col-3">
       <div class="svg w-100 p-2 rounded-3">
-        <img src="../../../assets/images/FrameCarpenter.png" class="img-fluid" />
+        <img [src]="category.image" class="img-fluid" />
       </div>
-      {{category.name}}
+      {{category.categoryname}}
     </div>
+  </div>
+  <div *ngIf="topCategories.length===0" class="no-categories d-flex justify-content-center">
+    No Categories
   </div>
   <div class="service-packages mb-4">
     <p class="d-flex justify-content-between align-items-center ">
         <strong class="fs-5">Service Packages</strong><span>view all</span>
       </p>
       <div class="card-slider d-flex">
-              <div *ngFor="let service of servicePackages" class="card">
-                <div class="card-body">
-                  <h5 class="card-title mb-3">
-                    <img
-                      class="svg"
-                      src="../../../assets/images/worker-red.svg"
+              <div *ngFor="let service of topServicePackages" class="card">
+                <img
+                      class="card-img-top serviceImg"
+                      [src]="service.Image"
                     />
-                  </h5>
-                  <h6 class="card-subtitle mb-2 service-name text-muted">{{service.serviceName}}</h6>
-                  <p class="card-text d-flex justify-content-between align-items-center ">{{service.cost}} <span class="d-flex"><mat-icon class="me-2">people</mat-icon>{{service.workers}}</span></p>
+                <div class="card-body">
+                  <h6 class="card-subtitle mb-2 service-name text-muted">{{service.servicename}}</h6>
+                  <p class="card-text d-flex justify-content-between align-items-center ">&#8377; {{service.Price}} <span class="d-flex"><mat-icon class="me-2">people</mat-icon>{{service.Workers}}</span></p>
                 </div>
-                <div class="card-footer d-flex justify-content-between align-items-center">
-                  <span *ngIf="!isInCart(service.serviceName)" (click)="addToCart(service)">Add to cart</span>
-                  <span *ngIf="isInCart(service.serviceName)" (click)="removeFromCart(service)">Remove from cart</span>
+                <div class="card-footer d-flex justify-content-center align-items-center">
+                  <span *ngIf="!isInCart(service.servicename)" (click)="addToCart(service)">Add to cart</span>
+                  <span *ngIf="isInCart(service.servicename)" (click)="removeFromCart(service)">Remove from cart</span>
                 </div>
               </div>
       </div>
